--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,57 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="20dp"
+        android:text="Temperatura:"
+        android:textSize="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
+
+    <TextView
+        android:id="@+id/temperatura"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dfdsf"
+        android:textSize="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"></TextView>
+
+    <TextView
+        android:id="@+id/wilgotnoscText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Wilgotność:"
+        android:textSize="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/temperatura"></TextView>
+
+    <TextView
+        android:id="@+id/wilgotnosc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dfdsf"
+        android:textSize="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wilgotnoscText"></TextView>
+    <TextView
+        android:id="@+id/predkoscText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Prędkość wiatru:"
+        android:textSize="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wilgotnosc"></TextView>
+
+    <TextView
+        android:id="@+id/predkosc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="dfdsf"
+        android:textSize="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/predkoscText"></TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
