Api connection using service

--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -8,43 +8,43 @@
 
 
     <TextView
-            android:text="TextView"
+            android:text="Waiting..."
             android:layout_width="wrap_content"
             android:textSize="50dp"
-            android:layout_height="wrap_content" android:id="@+id/data" android:layout_weight="1"/>
+            android:layout_height="wrap_content" android:id="@+id/title1" android:layout_weight="1"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/temperature"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="25dp"
-            android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"/>
+            android:layout_height="wrap_content" android:id="@+id/temperaturaText" android:layout_weight="1"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/waiting_for_data"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="25dp"
             android:layout_height="wrap_content" android:id="@+id/temperatura" android:layout_weight="1"/>
 
     <TextView
-            android:text="TextView"
+            android:text="@string/humidity"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="25dp"
             android:layout_height="wrap_content" android:id="@+id/wilgotnoscText" android:layout_weight="1"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/waiting_for_data"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="25dp"
             android:layout_height="wrap_content" android:id="@+id/wilgotnosc" android:layout_weight="1"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/windSpeed"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="25dp"
             android:layout_height="wrap_content" android:id="@+id/predkoscText" android:layout_weight="1"/>
     <TextView
-            android:text="TextView"
+            android:text="@string/waiting_for_data"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
             android:textSize="25dp"
