--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="200dp"
             app:layout_constraintVertical_bias="0.0"
-            android:id="@+id/container" android:orientation="horizontal">
+            android:id="@+id/container" android:orientation="horizontal" app:layout_constraintHorizontal_bias="1.0">
 
     </LinearLayout>
     <Button
