--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,31 +7,42 @@
                                                    tools:context=".MainActivity">
 
 
-    <LinearLayout android:layout_width="454dp"
+    <LinearLayout android:layout_width="460dp"
                   android:layout_height="389dp"
                   android:id="@+id/container" android:orientation="horizontal"
                   android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                   android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                  app:layout_constraintEnd_toStartOf="@+id/fragment1button" android:layout_marginEnd="8dp">
+    >
 
     </LinearLayout>
     <Button
-            android:text="Dzisiaj"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/fragment1button"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/fragment2button" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" app:layout_constraintVertical_bias="1.0"/>
-    <Button
-            android:text="Jutro"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:text="@string/tomorrow"
+            android:layout_width="111dp"
+            android:layout_height="66dp"
             android:id="@+id/fragment2button"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="208dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/container"
+            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/fragment1button" app:layout_constraintHorizontal_bias="0.514"/>
+    <Button
+
+            android:text="@string/today"
+            android:layout_width="111dp"
+            android:layout_height="66dp"
+            android:id="@+id/fragment1button"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/container"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/select_city"/>
+    <Button
+            android:text="@string/select_city"
+            android:layout_width="111dp"
+            android:layout_height="66dp"
+            android:id="@+id/select_city"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/container"
+            android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.514"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
