--- a/app/src/main/res/layout-land/fragment_blank_fragment2.xml
+++ b/app/src/main/res/layout-land/fragment_blank_fragment2.xml
@@ -12,7 +12,7 @@
             android:layout_height="match_parent" android:layout_weight="1">
 
         <TextView
-                android:text="TextView"
+                android:text="@string/waiting_for_data"
                 android:layout_width="wrap_content"
                 android:textSize="25dp"
                 android:layout_height="36dp" android:id="@+id/predkosc" android:layout_weight="1"
@@ -20,14 +20,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/wilgotnosc"
                 app:layout_constraintStart_toEndOf="@+id/predkoscText" android:layout_marginStart="12dp"/>
         <TextView
-                android:text="TextView"
+                android:text="@string/waiting_for_data"
                 android:layout_width="wrap_content"
                 android:textSize="25dp"
                 android:layout_height="37dp" android:id="@+id/wilgotnosc" android:layout_weight="1"
-                app:layout_constraintTop_toBottomOf="@+id/temperatura"
-                app:layout_constraintStart_toEndOf="@+id/wilgotnoscText" android:layout_marginStart="12dp"/>
+                app:layout_constraintStart_toEndOf="@+id/wilgotnoscText" android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="@+id/wilgotnoscText"/>
         <TextView
-                android:text="TextView"
+                android:text="@string/windSpeed"
                 android:layout_width="wrap_content"
                 android:textSize="25dp"
                 android:layout_height="36dp" android:id="@+id/predkoscText" android:layout_weight="1"
@@ -37,32 +37,32 @@
                 app:layout_constraintVertical_bias="0.0" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"/>
         <TextView
-                android:text="TextView"
-                android:layout_width="wrap_content"
+                android:text="@string/humidity"
+                android:layout_width="197dp"
                 android:textSize="25dp"
                 android:layout_height="38dp" android:id="@+id/wilgotnoscText" android:layout_weight="1"
                 app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"/>
         <TextView
-                android:text="TextView"
+                android:text="@string/waiting_for_data"
                 android:layout_width="wrap_content"
                 android:textSize="25dp"
                 android:layout_height="39dp" android:id="@+id/temperatura" android:layout_weight="1"
-                app:layout_constraintTop_toBottomOf="@+id/data"
-                app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginTop="4dp"
-                android:layout_marginStart="12dp"/>
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"/>
         <TextView
-                android:text="TextView"
+                android:text="@string/temperature"
                 android:layout_width="wrap_content"
                 android:textSize="25dp"
                 android:layout_height="39dp" android:id="@+id/textView" android:layout_weight="1"
-                app:layout_constraintTop_toBottomOf="@+id/data" android:layout_marginStart="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/title1" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="4dp"/>
         <TextView
-                android:text="TextView"
+                android:text="Waiting..."
                 android:layout_width="wrap_content"
                 android:textSize="50dp"
-                android:layout_height="81dp" android:id="@+id/data" android:layout_weight="1"
+                android:layout_height="81dp" android:id="@+id/title1" android:layout_weight="1"
                 android:layout_marginTop="80dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"/>
