Add values/string for value + replace dp by sp

--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -8,46 +8,46 @@
 
 
     <TextView
-            android:text="Waiting..."
+            android:text="@string/waiting_text"
             android:layout_width="wrap_content"
-            android:textSize="50dp"
+            android:textSize="50sp"
             android:layout_height="wrap_content" android:id="@+id/title1" android:layout_weight="1"/>
     <TextView
             android:text="@string/temperature"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_height="wrap_content" android:id="@+id/temperaturaText" android:layout_weight="1"/>
     <TextView
             android:text="@string/waiting_for_data"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_height="wrap_content" android:id="@+id/temperatura" android:layout_weight="1"/>
 
     <TextView
             android:text="@string/humidity"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_height="wrap_content" android:id="@+id/wilgotnoscText" android:layout_weight="1"/>
     <TextView
             android:text="@string/waiting_for_data"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_height="wrap_content" android:id="@+id/wilgotnosc" android:layout_weight="1"/>
     <TextView
             android:text="@string/windSpeed"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_height="wrap_content" android:id="@+id/predkoscText" android:layout_weight="1"/>
     <TextView
             android:text="@string/waiting_for_data"
             android:layout_width="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:layout_height="wrap_content" android:id="@+id/predkosc" android:layout_weight="1"/>
 
 </LinearLayout>
