--- a/app/src/main/res/layout-land/fragment_blank_fragment2.xml
+++ b/app/src/main/res/layout-land/fragment_blank_fragment2.xml
@@ -14,7 +14,7 @@
         <TextView
                 android:text="@string/waiting_for_data"
                 android:layout_width="wrap_content"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:layout_height="36dp" android:id="@+id/predkosc" android:layout_weight="1"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/wilgotnosc"
@@ -22,14 +22,14 @@
         <TextView
                 android:text="@string/waiting_for_data"
                 android:layout_width="wrap_content"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:layout_height="37dp" android:id="@+id/wilgotnosc" android:layout_weight="1"
                 app:layout_constraintStart_toEndOf="@+id/wilgotnoscText" android:layout_marginStart="8dp"
                 app:layout_constraintTop_toTopOf="@+id/wilgotnoscText"/>
         <TextView
                 android:text="@string/windSpeed"
                 android:layout_width="wrap_content"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:layout_height="36dp" android:id="@+id/predkoscText" android:layout_weight="1"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/wilgotnoscText" android:layout_marginBottom="8dp"
@@ -39,14 +39,14 @@
         <TextView
                 android:text="@string/humidity"
                 android:layout_width="197dp"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:layout_height="38dp" android:id="@+id/wilgotnoscText" android:layout_weight="1"
                 app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="40dp"/>
         <TextView
                 android:text="@string/waiting_for_data"
                 android:layout_width="wrap_content"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:layout_height="39dp" android:id="@+id/temperatura" android:layout_weight="1"
                 android:layout_marginTop="4dp"
                 app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginStart="16dp"
@@ -54,14 +54,14 @@
         <TextView
                 android:text="@string/temperature"
                 android:layout_width="wrap_content"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:layout_height="39dp" android:id="@+id/textView" android:layout_weight="1"
                 app:layout_constraintTop_toBottomOf="@+id/title1" android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="4dp"/>
         <TextView
-                android:text="Waiting..."
+                android:text="@string/waiting_text"
                 android:layout_width="wrap_content"
-                android:textSize="50dp"
+                android:textSize="50sp"
                 android:layout_height="81dp" android:id="@+id/title1" android:layout_weight="1"
                 android:layout_marginTop="80dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
