--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,13 @@
     tools:context=".MainActivity">
 
 
+    <Button
+            android:text="Odswierz"
+            android:layout_width="111dp"
+            android:layout_height="66dp"
+            android:id="@+id/select_city2" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <LinearLayout
             android:layout_width="0dp"
             android:layout_height="579dp" app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +45,8 @@
             android:text="@string/select_city"
             android:layout_width="111dp"
             android:layout_height="66dp"
-            android:id="@+id/select_city" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginBottom="36dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:id="@+id/select_city" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="76dp" app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
