--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
-    <Button
-            android:text="Odswierz"
-            android:layout_width="111dp"
-            android:layout_height="66dp"
-            android:id="@+id/select_city2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <LinearLayout
             android:layout_width="0dp"
             android:layout_height="579dp" app:layout_constraintTop_toTopOf="parent"
@@ -24,29 +16,52 @@
             android:id="@+id/container" android:orientation="horizontal" app:layout_constraintHorizontal_bias="1.0">
 
     </LinearLayout>
+
     <Button
-            android:text="@string/today"
-            android:layout_width="111dp"
-            android:layout_height="66dp"
-            android:id="@+id/fragment1button" android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"
-            app:layout_constraintHorizontal_bias="0.589"
-            app:layout_constraintEnd_toStartOf="@+id/fragment2button"
-            app:layout_constraintStart_toEndOf="@+id/select_city"/>
+        android:id="@+id/fragment1button"
+        android:textSize="10dp"
+        android:layout_width="95dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="36dp"
+        android:text="@string/today"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fragment2button"
+        app:layout_constraintHorizontal_bias="1.05"
+        app:layout_constraintStart_toEndOf="@+id/select_city" />
+
     <Button
             android:text="@string/tomorrow"
-            android:layout_width="111dp"
+            android:textSize="10dp"
+            android:layout_width="95dp"
             android:layout_height="66dp"
             android:id="@+id/fragment2button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="36dp"
     />
+
     <Button
-            android:text="@string/select_city"
-            android:layout_width="111dp"
-            android:layout_height="66dp"
-            android:id="@+id/select_city" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="76dp" app:layout_constraintBottom_toBottomOf="parent"/>
+        android:id="@+id/select_city"
+        android:textSize="10dp"
+        android:layout_width="95dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="36dp"
+        android:text="@string/select_city"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:text="@string/refresh"
+        android:layout_width="95dp"
+        android:textSize="10dp"
+        android:layout_height="66dp"
+        android:id="@+id/select_city2" app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="36dp"
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintEnd_toStartOf="@+id/fragment2button"
+        app:layout_constraintStart_toEndOf="@+id/select_city"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
